# libguestfs-mingw-port

./: git-config.sh  mask-gitignore.sh
libguestfs-1.28.5/: ChangeLog  Makefile.am  Makefile.am.mingw  MakefileLinux  MakefileMinGW  configure  configure-run.sh  configure.ac  mingw-make-clean.sh  mingw-make-run.sh  run-linux-configure.sh
libguestfs-1.28.5/appliance/: Makefile.am.mingw  MakefileLinux  build.sh  hostfiles.in  sync-appliance.sh
libguestfs-1.28.5/builder/: Makefile.in
libguestfs-1.28.5/csharp/: Libguestfs.cs
libguestfs-1.28.5/customize/: Makefile.in
libguestfs-1.28.5/daemon/: Makefile.am  Makefile.am.mingw  MakefileLinux  daemon.h  guestfsd.c  proto.c  shared-memory.c  shared-memory.h  upload.c
libguestfs-1.28.5/erlang/: erl-guestfs.c  guestfs.erl
libguestfs-1.28.5/fish/: cmds-gperf.c  cmds-gperf.gperf  cmds.c  completion.c  guestfish-actions.pod
libguestfs-1.28.5/generator/: Makefile.am.mingw  MakefileLinux  MakefileMinGW  actions.ml  mingw_main.ml  xdr.ml
libguestfs-1.28.5/gobject/: Makefile.in
libguestfs-1.28.5/osdep/: Makefile.am  MakefileLinux  MakefileMinGW  os-error.h  os-fcntl.c  os-fcntl.h  os-pipe.c  os-pipe.h  os-process.c  os-process.h  os-shmem.c  os-shmem.h  os-socket.c  os-socket.h  os-socketpair.c  os-socketpair.h
libguestfs-1.28.5/winport/: Makefile.am  MakefileMinGW  endian.h  mingw-unistd.h  unistd.h  win-defs.h  win-error.c  win-gettimeofday.c  win-getuid.c  win-mem.c  win-port.h  win-realpath.c  win-strndup.c  win-symlink.c  win-vaprintf.c
libguestfs-1.28.5/winport/sys/: ioctl.h  select.h
(+188 files in other folders)
